--- a/eks.yaml
+++ b/eks.yaml
@@ -1,12 +1,13 @@
 apiVersion: eksctl.io/v1alpha5 
-kind: ClusterConfig 
+king: ClusterConfig 
 
 metadata: 
-   name: roboshop 
-   region: us-east-1 
+    name: roboshop 
+    region: us-east-1 
 
-managedNodeGroups: 
-- name: roboshop 
-  instanceTypes: ["m5.large","c3.large","c4.large","c5.large"] 
+managesNodeGroup:
+- name:  roboshsop 
+  instanceTypes: ["m5.large","c4.lrage","c3.large","c2.large"]
   desiredCapacity: 3 
-  spot: true   
+  spot: true 
+      
