--- a/eks.yaml
+++ b/eks.yaml
@@ -1,13 +1,12 @@
-apiVersion: eksctl.io/v1alpha5 
-kind: ClusterConfig 
+apiVersion: eksctl.io/v1alpha5
+kind: ClusterConfig
 
-metadata: 
-    name: roboshop 
-    region: us-east-1 
+metadata:
+  name: roboshop
+  region: us-east-1
 
-managesNodeGroup:
-- name:  roboshsop 
-  instanceTypes: ["m5.large","c4.lrage","c3.large","c2.large"]
-  desiredCapacity: 3 
-  spot: true 
-      
+managedNodeGroups:
+  - name: roboshop
+    instanceTypes: ["m5.large", "c3.large","c4.large","c5.large"]
+    desiredCapacity: 3
+    spot: true
