--- a/eks.yaml
+++ b/eks.yaml
@@ -7,6 +7,6 @@ metadata:
 
 ManagedNodeGroups: 
 - name: roboshop 
-  instance_type: ["m5.large","c3.large","c4.large","c5.large"] 
+  instanceTypes: ["m5.large","c3.large","c4.large","c5.large"] 
   desiredCapacity: 3 
   spot: true  
