--- a/eks.yaml
+++ b/eks.yaml
@@ -5,8 +5,8 @@ metadata:
   name: roboshop 
   region: us-east-1 
 
-ManagedNodeGroups: 
-- name: roboshop 
-  instanceTypes: ["m5.large","c3.large","c4.large","c5.large"] 
-  desiredCapacity: 3 
-  spot: true  
+managedNodeGroups: 
+ - name: roboshop 
+   instanceTypes: ["m5.large","c3.large","c4.large","c5.large"] 
+   desiredCapacity: 3 
+   spot: true  
